--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
     <h2>Login</h2>
-    <input type="text" [(ngModel)]="name" placeholder="Enter your name" />
+    <input type="text" [(ngModel)]="userName" placeholder="Enter your name" />
     <button (click)="login()">Login</button>
 </div>
