--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -6,10 +6,10 @@
         <th>Score</th>
       </tr>
       <tr *ngFor="let score of scores">
-        <td>{{ score.user.name }}</td>
+        <td>{{ score.user.userName }}</td>
         <td>{{ score.score }}</td>
       </tr>
     </table>
-    <button (click)="playAgain()">Play Again</button>
+    <button (click)="playAgain()">Play</button>
 </div>
   
