--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -4,12 +4,19 @@
       <tr>
         <th>Player</th>
         <th>Score</th>
+        <th>Mode</th>
       </tr>
       <tr *ngFor="let score of scores">
         <td>{{ score.user.userName }}</td>
         <td>{{ score.score }}</td>
+        <td>{{ score.mode }}</td>
       </tr>
     </table>
-    <button (click)="playAgain()">Play</button>
+    <div class="mode-selection">
+      <h3>Select Game Mode</h3>
+      <button (click)="playGame('easy')">Easy</button>
+      <button (click)="playGame('medium')">Medium</button>
+      <button (click)="playGame('hard')">Hard</button>
+    </div>
 </div>
   
